<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="welcome">单词助手</string>
    <string name="flash">记忆卡片</string>
    <string name="list">列表记忆</string>
    <string name="test">单词测试</string>
    <string name="submit">提交</string>
    <string name="submit_dialog_title">你是否想提交此次考试？</string>
    <string name="submit_dialog_score">你的分数是：</string>
    <string name="alert_dialog_ok">确定</string>
    <string name="alert_dialog_cancel">取消</string>
    <string name="Quit_test">按下确定以退出测试</string>
    <string name="app_name">单词助手</string>
    <string name="first_button">按下我</string>
    <string name="hello">欢迎</string>
    <string name="remember">记住上次进度</string>
    <string name="remember_detail">记住上次学习的课程的单词进度</string>
    <string name="over_all">全局</string>
    <string name="course">选择课程</string>
    <string name="about">关于</string>
    <string name="set">设置</string>
    <string name="setting">章节设置</string>
    <string name="refresh">刷新</string>
    <string name="more">更多</string>
    <string name="Words">单词</string>
    <string name="flash_show">记忆卡片模式</string>
    <string name="list_show">列表记忆模式</string>
    <string name="title">选择显示模式</string>
    <string name="n10">10</string>
    <string name="n20">20</string>
    <string name="n50">50</string>
    <string name="cus">自定义</string>
    <string name="settask">设置每节词汇数量</string>
    <string name="settask_detail">设置每节所背单词的数量</string>
    <string name="setcus">设置自定义数量</string>
    <string name="setcus_detail">自定义设置单词数量</string>
    <string name="setstart">设置单词起始点</string>
    <string name="setstart_detail">设置该节所背单词的起始点</string>
    <string name="voice">网络发音</string>
    <string name="voice_detail">网络真人发音</string>
    <string name="Custumer">自定义设置</string>
    <string name="Custumer_detail">自定义设置起始的单词</string>
    <string name="show_graph">显示图表</string>
    <string name="show_graph_detail">显示图表来统计你的单词记忆数据</string>
    <string name="ok">确定</string>
    <string name="Next">下一节</string>
    <string name="Previous">前一节</string>
    <string name="back">返回</string>
    <string name="warning">警告</string>
    <string name="Starred_on">Starred on</string>
    <string name="Starred_off">Starred off</string>
    <string name="warning_start">之前的单词数目不够</string>
    <string name="warning_end">后面的单词数目不够</string>
    <string name="imformation">单词助手是用于在你的Android手机上进行单词的记忆。在这个程序里你可以使用两种不同的方式来背诵单词，一个是记忆卡片，一个是列表记忆。在完成单词的背诵之后，你需要进行一次针对你所背的单词的测试，以此来判断你是否真的完成了该小节的背诵。感谢您的使用！\n\n <b>联系我：</b>\n \t E-mail: <a href="VikeHsu@gmail.com">VikeHsu@gmail.com</a>\n \t 推特： <a href="http://twitter.com/VikeHsu">@VikeHsu</a></string>

</resources>
