<?xml version="1.0" encoding="utf-8"?>
<ScrollView
android:layout_width="fill_parent"
android:layout_height="fill_parent"
xmlns:android="http://schemas.android.com/apk/res/android"
>
<LinearLayout
android:layout_width="fill_parent"
android:layout_height="wrap_content"
android:orientation="horizontal"
>
<LinearLayout
android:layout_width="fill_parent"
android:layout_height="wrap_content"
android:orientation="vertical"
>
<TextView
android:id="@+id/textname"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:textSize="22sp"
>
</TextView>
<TextView
android:id="@+id/textset"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:layout_marginTop="20sp"
android:text="@string/setstart"
android:textSize="18sp"
>
</TextView>
<EditText
android:id="@+id/setpage"
android:inputType="number"
android:numeric="integer"
android:layout_width="100sp"
android:layout_height="wrap_content"
android:textSize="18sp"
>
</EditText>

<SeekBar
android:id="@+id/Progress"
android:layout_width="fill_parent"
android:layout_height="wrap_content"
>
</SeekBar>

<TextView
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:layout_marginTop="10sp"
android:text="@string/settask"
android:textSize="18sp"
>
</TextView>
<RadioGroup
android:id="@+id/RadioGroup"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:orientation="horizontal"
>
<RadioButton
android:id="@+id/Radio1"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:layout_marginRight="5sp"
android:text="@string/n10"
>
</RadioButton>
<RadioButton
android:id="@+id/Radio2"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:layout_marginRight="5sp"
android:text="@string/n20"
>
</RadioButton>
<RadioButton
android:id="@+id/Radio3"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:layout_marginRight="5sp"
android:text="@string/n50"
>
</RadioButton>
<RadioButton
android:id="@+id/Radio4"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:text="@string/cus"
>
</RadioButton>
</RadioGroup>
<TextView
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:text="@string/setcus"
android:textSize="18sp"
>
</TextView>
<EditText
android:id="@+id/customer"
android:inputType="number"
android:numeric="integer"
android:layout_width="100sp"
android:layout_height="wrap_content"
android:layout_marginTop="10sp"
android:textSize="18sp"
>
</EditText>
</LinearLayout>
<LinearLayout
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:orientation="horizontal"
>



</LinearLayout>
</LinearLayout>
</ScrollView>